[package]
name = "ref-stable-lru"
version = "0.1.0"
edition = "2021"
description = "An LRU Cache implementation with compile-time reference stability"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "ui-tests"
path = "tests/ui/test.rs"

[dependencies]

[dev-dependencies]
trybuild = "1"
futures = { version = "0.3", features = ["executor"] }
